--- a/app/views/orders/new.erb
+++ b/app/views/orders/new.erb
@@ -10,15 +10,29 @@
         <%= form_for @order do |f|%>
 
             <%= f.hidden_field(:customer_id, :value => session["user_id"]) %>
-            
+
             <%= f.label "Is Your Order a Delivery?" %>
-            <%= f.text_field :is_delivery? %>
+            <%= f.radio_button("order","is_delivery?", :checked => false, value:true) %>Yes
+            <%= f.radio_button("order","is_delivery?", :checked => true, value:false) %>No
+        
+            <br>
+            <br>
 
             <%= f.label "Choose an Item" %>
-            <%= f.collection_select(:menu_item_id, MenuItem.all, :id, :name, {:prompt => "Select one"}) %>
+            <% if session['bakery_id'] %>
+                <%= f.collection_select(:menu_item_id, Bakery.find(session['bakery_id']).menu_items, :id, :name, {:prompt => "Select one"}) %>
+            <% else %>
+                <%= f.collection_select(:menu_item_id, MenuItem.all, :id, :name, {:prompt => "Select one"}) %>
+            <%end%>
+
+            <br>
+            <br>
 
             <%= f.label "Write a Description for Your Order" %>
             <%= f.text_field :desc %>
+
+            <br>
+            <br>
 
             <%= f.submit "Submit Order" %>
         <%end%>
