--- a/app/views/customers/show.erb
+++ b/app/views/customers/show.erb
@@ -2,22 +2,35 @@
 <html>
     <head>
         <p><%= @customer.name %>'s Account</p>
-        <button>Log Out</button>
+
+        <%= form_tag logout_path, method:'DELETE' do %>
+            <%= submit_tag "Log Out" %>
+        <%end%>
+
         <title>Show Customer</title>
         <h1> <%= @customer.name %>'s Orders </h1>
     </head>
 
     <body>
-        <br>
-        <% @customer.orders.each do |order| %>
-            <h3><%= order.menu_item.bakery.name %></h3>
-            <h4><li>Order: <%= order.menu_item.name %></li></h4>
-            <h4><li>Description: <%= order.desc %></li></h4>
+        
+        <!-- <p><%= image_tag 'cake.png' %></p> -->
+        
+        <% if @customer.orders.length == 0 %>
+            <h3> No Orders Yet. </h3>
+        <%else%>
             <br>
+            <% i = 0 %>
+            <% @customer.orders.each do |order| %>
+                <% i += 1 %>
+                <h3><%= link_to order.menu_item.bakery.name, bakery_path(order.menu_item.bakery) %></h3>
+                <h4><li><%= link_to "Order Number #{i}", order_path(order) %></li></h4>
+            <%end%>
         <%end%>
-
-    <button> <%= link_to "Create an Order", new_order_path %> </button><br>
-    <button> <%= link_to "See all Bakeries", bakeries_path %> </button><br>
+    
+    <br>
+    <div><button style='font-size:15px'> <%= link_to "Create an Order", new_order_path %> </button></div>
+    <br>
+    <div><button style='font-size:15px'> <%= link_to "See all Bakeries", bakeries_path %> </button></div>
 
     <br>
         
