--- a/app/views/bakeries/index.erb
+++ b/app/views/bakeries/index.erb
@@ -5,7 +5,10 @@
         <h1>All Bakeries</h1>
     </head>
 
-    <body>
+    <body class='index_bakery'>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
+        <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+   
 
         <h1>Most Popular Bakery: <%= Bakery.most_popular %></h1>
 
@@ -14,7 +17,8 @@
             <h2><%= link_to bakery.name, bakery_path(bakery) %></h2>
         <% end %>
         </div>
-
+        
+        <br><br>
         <button><%= link_to "You're Profile", customer_path(Customer.find(session['user_id'])) %></button><br>
         <br>
     </body>
