--- a/app/views/bakeries/new.erb
+++ b/app/views/bakeries/new.erb
@@ -3,10 +3,14 @@
     
     <head>
         <title>Create Bakery</title>
-        <h1>Create a New Bakery</h1>
     </head>
 
-    <body>
+    <body class='new_bakery'>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+    
+
+        <h1>Create a New Bakery</h1>
         
         <%= form_for @bakery do |f| %>
             <%= f.label "Bakery's Name" %>
