--- a/app/views/customers/edit.erb
+++ b/app/views/customers/edit.erb
@@ -1,3 +1,9 @@
+
+<body class='edit_customer'>
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
+<script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+
 <h1>Edit Account</h1>
 
 <%= form_for @customer do |c| %>
@@ -9,3 +15,4 @@
     <%= c.password_field :password_digest %>
     <%= c.submit "Save Changes" %>
 <% end %>
+</body>
