login page pt.2

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -59,9 +59,9 @@
      background-color: antiquewhite;
  }
 
- 
- 
- 
 
+  /* .header {
+    background-image: url("./images/bakery.jpg");
+    background-position: center
 
-
+  } */
